syntax = "proto3";
package ingredient_service.v1;

option go_package = "server/generated/proto/ingredient_service/v1/ingredientpb";

service IngredientService {
  // Creates an ingredient
  rpc CreateIngredient(CreateIngredientRequest) returns (CreateIngredientResponse);

  // Gets an ingredient
  rpc GetIngredient(GetIngredientRequest) returns (GetIngredientResponse);

  // Lists ingredients
  rpc ListIngredients(ListIngredientsRequest) returns (ListIngredientsResponse);

  // Updates an ingredient
  rpc UpdateIngredient(UpdateIngredientRequest) returns (UpdateIngredientResponse);

  // Deletes an Ingredient
  rpc DeleteIngredient(DeleteIngredientRequest) returns (DeleteIngredientResponse);
}

// Ingredient message to represent the ingredient data.
message Ingredient {
  string id = 1; // Unique identifier for the ingredient.
  string name = 2; // Name of the ingredient (e.g. Butter).
}

// Request message for creating an ingredient.
message CreateIngredientRequest {
  Ingredient ingredient = 1; // The ingredient to create.
}

// Response message for an ingredient.
message CreateIngredientResponse {
  Ingredient ingredient = 1;
}

// Request message for fetching an ingredient by its ID.
message GetIngredientRequest {
  string id = 1; // ID of the ingredient to fetch.
}

// Response message for an ingredient.
message GetIngredientResponse {
  Ingredient ingredient = 1;
}

// Request message for listing ingredients by its ID.
message ListIngredientsRequest {
  int32 limit = 1; // Optional limit for pagination.
  int32 offset = 2; // Optional offset for pagination.
}

// Response message for returning the ingredients list.
message ListIngredientsResponse {
  repeated Ingredient ingredients = 1; // List of ingredients.
}

// Request message for updating an ingredient by its ID.
message UpdateIngredientRequest {
  string id = 1; // Ingredient ID to update.
  string name = 2; // New name for the ingredient.
}

// Response message for an ingredient.
message UpdateIngredientResponse {
  Ingredient ingredient = 1;
}

// Request message for deleting an ingredient by its ID.
message DeleteIngredientRequest {
  string id = 1; // Ingredient ID to delete.
}

// Empty response message
message DeleteIngredientResponse {}
